attempting to fix the text align on social media screens

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -221,7 +221,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: justify;
+  text-align: left;
   text-indent: 15px;
   padding: 0 2vw;
   width: 46.5vw;
